player-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player-ingress-backend-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: player-ingress-backend-service
  type: NodePort
