player-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epl-player-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "player-global-ip"
spec:
  defaultBackend:
    service:
      name: player-ingress-backend-service
      port:
        number: 8080
