static-ip-global.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: player-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: player-global-ip
  labels:
    app: player-app
spec:
  defaultBackend:
    service:
      name: player-app-service
      port:
        number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: player-app-service
  labels:
    app: player-app
spec:
  selector:
    app: player-app
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
  loadBalancerIP: 34.124.136.171
